@@ -10,6 +10,7 @@ namespace Mono.Debugging.Backend
 		ObjectValue[] GetLocalVariables (int frameIndex, EvaluationOptions options);
 		ObjectValue[] GetParameters (int frameIndex, EvaluationOptions options);
 		ObjectValue GetThisReference (int frameIndex, EvaluationOptions options);
+		ObjectValue GetException (int frameIndex, EvaluationOptions options);
 		ObjectValue[] GetAllLocals (int frameIndex, EvaluationOptions options);
 		ObjectValue[] GetExpressionValues (int frameIndex, string[] expressions, EvaluationOptions options);
 		CompletionData GetExpressionCompletionData (int frameIndex, string exp);
