@@ -1,3 +1,15 @@
+2010-02-22  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Mono.Debugging.Client/StackFrame.cs:
+	* Mono.Debugging.Backend/IBacktrace.cs:
+	* Mono.Debugging.Client/TargetEventArgs.cs:
+	* Mono.Debugging.Evaluation/BaseBacktrace.cs:
+	* Mono.Debugging.Client/EvaluationOptions.cs:
+	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs:
+	* Mono.Debugging.Evaluation/NRefactoryEvaluator.cs: Added
+	  method for getting the current exception when a catchpoint
+	  is hit or an exception unhandled.
+
 2010-02-19  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* Mono.Debugging.Client/StackFrame.cs: Fix win32 build.
